cmake_minimum_required(VERSION 3.16.0)

message(">> testclient CMakeLists.txt")

# Project named 'testclient' on C++
project(testclient LANGUAGES CXX)

# C++ standard is inherited from root CMakeLists.txt (C++20)

# Default to Release mode
if (NOT CMAKE_BUILD_TYPE)
    set (CMAKE_BUILD_TYPE Release)
endif ()

# Set output directories to match root CMakeLists.txt
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)

# Diagnostics
message("CMAKE_BUILD_TYPE: '${CMAKE_BUILD_TYPE}'")

# Set paths
get_filename_component(ROOT_DIR ../ ABSOLUTE BASE_DIR ${CMAKE_CURRENT_SOURCE_DIR})
set (SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR})

# Resolve base paths for Core library and Data
get_filename_component(CORE_LIBRARY_PATH
                       "${CMAKE_CURRENT_LIST_DIR}/../core"
                       ABSOLUTE)
message("CORE_LIBRARY_PATH: ${CORE_LIBRARY_PATH}")
get_filename_component(DATA_PATH
        "${CMAKE_CURRENT_LIST_DIR}/../data"
        ABSOLUTE)
message("DATA_PATH: ${DATA_PATH}")

# Include CMake helper functions file
include(${ROOT_DIR}/cmake/func.cmake)

# Add core library dependency (if not built from the root CMakeLists.txt)
if (NOT TARGET core)
    add_subdirectory(${CORE_LIBRARY_PATH}/src core)
endif (NOT TARGET core)

# Use /src as root for include files
include_directories(
    ${CMAKE_CURRENT_SOURCE_DIR}/src
)

# Use all .cpp files from /src (recursively)
file (GLOB_RECURSE CPP_FILES ${CMAKE_CURRENT_SOURCE_DIR}/src/*.cpp)
EXCLUDE_FILES_FROM_DIR_IN_LIST("${TEST_CPP_FILES}" "/build/" FALSE OUTVAR TEST_CPP_FILES) # Exclude /tests/build folder
EXCLUDE_FILES_FROM_DIR_IN_LIST("${TEST_CPP_FILES}" "/CMakeFiles/" FALSE OUTVAR TEST_CPP_FILES) # Exclude /CMakeFile autogenerated files
set (SOURCES ${CPP_FILES})

# Use all .cc files from /src (recursively)
file (GLOB_RECURSE CC_FILES ${CMAKE_CURRENT_SOURCE_DIR}/src/*.cc)
EXCLUDE_FILES_FROM_DIR_IN_LIST("${TEST_CPP_FILES}" "/build/" FALSE OUTVAR TEST_CPP_FILES) # Exclude /tests/build folder
EXCLUDE_FILES_FROM_DIR_IN_LIST("${TEST_CPP_FILES}" "/CMakeFiles/" FALSE OUTVAR TEST_CPP_FILES) # Exclude /CMakeFile autogenerated files
set (SOURCES ${CPP_FILES} ${CC_FILES})

message("CC_FILES:${CC_FILES}")


# Produce executable
add_executable(${PROJECT_NAME} ${SOURCES})

# Declare _DEBUG symbol for compiler
if (CMAKE_BUILD_TYPE MATCHES Debug)
    message(STATUS "CMAKE_BUILD_TYPE:${CMAKE_BUILD_TYPE} - defining '_DEBUG'")
    target_compile_definitions(${PROJECT_NAME} PRIVATE _DEBUG)
endif (CMAKE_BUILD_TYPE MATCHES Debug)


# Add core library includes path for testclient
target_include_directories(${PROJECT_NAME} PRIVATE ${CORE_LIBRARY_PATH}/src)

# All standard libraries required
if (UNIX AND NOT APPLE)
    set(CMAKE_CXX_FLAGS " -static-libstdc++")
    set(common_libraries -static-libstdc++ pthread)
endif (UNIX AND NOT APPLE)

if (APPLE)
    target_link_directories(${PROJECT_NAME} PRIVATE /usr/lib)   # Use system-provided libpthread and libiconv
    set(common_libraries pthread iconv)
endif (APPLE)

if (WIN32 AND MINGW)
    # Link all libraries as static
    set_target_properties(${PROJECT_NAME} PROPERTIES LINK_FLAGS "-static-libgcc -static-libstdc++ -Wl,-Bstatic,--whole-archive -lwinpthread -lshlwapi -Wl,--no-whole-archive")
endif (WIN32 AND MINGW)

# Link with core library
target_link_libraries(${PROJECT_NAME} PRIVATE core)
target_link_libraries(${PROJECT_NAME} PRIVATE ${common_libraries})

# Copy ROM and INI files to build/bin directory
add_custom_command(
        TARGET ${PROJECT_NAME} POST_BUILD
        COMMAND ${CMAKE_COMMAND} -E make_directory "${CMAKE_BINARY_DIR}/bin"
        COMMAND ${CMAKE_COMMAND} -E copy_directory ${DATA_PATH}/rom "${CMAKE_BINARY_DIR}/bin/rom"
        COMMAND ${CMAKE_COMMAND} -E copy_directory ${DATA_PATH}/testrom "${CMAKE_BINARY_DIR}/bin/rom"
        COMMAND ${CMAKE_COMMAND} -E copy ${DATA_PATH}/configs/pentagon128k/unreal.ini "${CMAKE_BINARY_DIR}/bin/unreal.ini"
)